tests/ui/typeck/function_calls/enum_value_not_callable.stderr
error: expected function, found `enum E`
   ╭▸ ROOT/tests/ui/typeck/function_calls/enum_value_not_callable.sol:LL:CC
   │
LL │     uint a = E.B(1000);
   │              ━━━
   ╰╴
note: call expression requires function
   ╭▸ ROOT/tests/ui/typeck/function_calls/enum_value_not_callable.sol:LL:CC
   │
LL │     uint a = E.B(1000);
   ╰╴             ━━━━━━━━━

error: aborting due to 1 previous error

