tests/ui/typeck/function_calls/enum_value_not_callable.sol
//@ compile-flags: -Ztypeck
enum E { A, B, C }

contract C {
    uint a = E.B(1000); //~ ERROR: expected function
}
